@@ -38,7 +38,6 @@ import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.persistence.criteria.CriteriaBuilder;
@@ -326,6 +325,6 @@ public class MinionServerFactory extends HibernateFactory {
         return allMinions.stream().filter(
                 minionSummary -> MinionServerFactory.findByMinionId(minionSummary.getMinionId())
                 .map(server -> server.isDeniedOnPayg())
-                .orElse(false)).collect(Collectors.toList());
+                .orElse(false)).toList();
     }
 }
