@@ -311,13 +311,13 @@ public class ErrataManager extends BaseManager {
         List<OwnedErrata> emptyChannelErrata = filteredErrata.stream()
             .filter(t -> t.getChannels().isEmpty())
             .map(OwnedErrata::new)
-            .collect(Collectors.toList());
+            .toList();
         ErrataManager.deleteErrata(user, emptyChannelErrata);
     }
 
     private static Optional<ClonedErrata> asCloned(Errata e) {
-        if (e instanceof ClonedErrata) {
-            return Optional.of((ClonedErrata) e);
+        if (e instanceof ClonedErrata clone) {
+            return Optional.of(clone);
         }
         return Optional.empty();
     }
@@ -676,7 +676,7 @@ public class ErrataManager extends BaseManager {
 
         List<Long> notFoundIds = eids.stream()
                 .filter(id -> !foundErrataIds.contains(id))
-                .collect(Collectors.toList());
+                .toList();
 
         // If we didn't find an errata or
         // it's a non-accessible RH errata or the errata belongs to another org,
@@ -1295,7 +1295,7 @@ public class ErrataManager extends BaseManager {
                 p -> includedErrata.stream().noneMatch(included -> included.getPackages().contains(p))
             )
         ).collect(Collectors.toUnmodifiableSet());
-        List<Long> pids = packagesToRemove.stream().map(Package::getId).collect(Collectors.toList());
+        List<Long> pids = packagesToRemove.stream().map(Package::getId).toList();
         ErrataCacheManager.deleteCacheEntriesForChannelPackages(chan.getId(), pids);
 
         // remove packages
@@ -1493,7 +1493,7 @@ public class ErrataManager extends BaseManager {
     public static void bulkErrataNotification(Map<Long, List<Long>> errataToChannels, Date date) {
         List<Map<String, Object>> eidList = errataToChannels.entrySet().stream()
                 .map(entry -> Collections.singletonMap("eid", (Object)entry.getKey()))
-                .collect(Collectors.toList());
+                .toList();
         WriteMode m = ModeFactory.getWriteMode(ERRATA_QUERIES,  "clear_errata_notification");
         m.executeUpdates(eidList);
 
@@ -1507,7 +1507,7 @@ public class ErrataManager extends BaseManager {
                     params.put("datetime", newDate);
                     return params;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         WriteMode w = ModeFactory.getWriteMode(ERRATA_QUERIES,  "insert_errata_notification");
         w.executeUpdates(notifyList);
