@@ -46,7 +46,6 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Tests {@link com.suse.scc.registration.SCCSystemRegistration}.
@@ -96,7 +95,7 @@ public class SCCSystemRegistrationTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         this.testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().getServerInfo().getCheckin().equals(new Date(0)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -233,7 +232,7 @@ public class SCCSystemRegistrationTest extends BaseTestCaseWithUser {
                                 .map(system ->
                                         new SCCSystemCredentialsJson(system.getLogin(), system.getPassword(), 12345L)
                                 )
-                                .collect(Collectors.toList())
+                                .toList()
                 );
             }
 
@@ -349,7 +348,7 @@ public class SCCSystemRegistrationTest extends BaseTestCaseWithUser {
                                 .map(system ->
                                         new SCCSystemCredentialsJson(system.getLogin(), system.getPassword(), 12345L)
                                 )
-                                .collect(Collectors.toList())
+                                .toList()
                 );
             }
 
